lib/token.c
/* Generated by re2c 0.5 on Thu Mar 13 06:53:03 2003 */
#line 1 "lib/token.re"
//
// token.re
//
// $Author$
// $Date$
//
// Copyright (C) 2003 why the lucky stiff
//

#include "syck.h"
#include "gram.h"

enum {
    STATE_PLAIN = 0,
    STATE_SINGLE_QUOTE,
    STATE_DOUBLE_QUOTE
};

#define QUOTELEN    1024
#define YYCTYPE     char
#define YYCURSOR    parser->cursor
#define YYMARKER    parser->marker
#define YYLIMIT     parser->limit
#define YYTOKEN     parser->token
#define YYLINEPTR   parser->lineptr
#define YYLINE      parser->linect
#define YYFILL(n)   syck_parser_read(parser);
#define YYPOS(n)    YYCURSOR = YYTOKEN + n;

#define NEWLINE(ptr)    YYLINE++; YYLINEPTR = ptr + 1;
#define ADD_LEVEL(len)  syck_parser_add_level( parser, len );
#define CURRENT_LEVEL() syck_parser_current_level( parser );

#define ENSURE_IOPEN(last_lvl, to_len, reset) \
        if ( last_lvl->spaces < to_len ) \
        { \
            ADD_LEVEL( to_len ); \
            if ( reset == 1 ) YYPOS(0); \
            return IOPEN; \
        } 

#define ENSURE_IEND(last_lvl, to_len) \
        if ( last_lvl->spaces > to_len ) \
        { \
            syck_parser_pop_level( parser ); \
            YYPOS(0); \
            return IEND; \
        }

#define QUOTECAT(s, c, i, l) \
        { \
            if ( i + 1 >= c ) \
            { \
                c += QUOTELEN; \
                S_REALLOC_N( s, char, c ); \
            } \
            s[i++] = l; \
            s[i] = '\0'; \
        }

SyckParser *syck_parser_ptr = NULL;

int
yylex( YYSTYPE *yylval, SyckParser *parser )
{
    int state;
    syck_parser_ptr = parser;
    if ( parser->cursor == NULL ) syck_parser_read( parser );

#line 83


Document:

    YYTOKEN = YYCURSOR;
    state = STATE_PLAIN;

#ifdef REDEBUG
    printf( "TOKEN: %s\n", YYTOKEN );
#endif

{
	YYCTYPE yych;
	unsigned int yyaccept;
	static unsigned char yybm[] = {
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0, 192,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	 80,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	 32,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,   0,   0,   0,   0,   0,   0, 
	  0,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,  32,   0,   0,   0,   0,  32, 
	  0,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,  32,  32,  32,  32,  32,  32, 
	 32,  32,  32,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	goto yy0;
yy1:	++YYCURSOR;
yy0:
	if((YYLIMIT - YYCURSOR) < 4) YYFILL(4);
	yych = *YYCURSOR;
	if(yych <= ','){
		if(yych <= '"'){
			if(yych <= '\n'){
				if(yych <= '\000')	goto yy21;
				if(yych <= '\t')	goto yy23;
				goto yy4;
			} else {
				if(yych <= '\037')	goto yy23;
				if(yych <= ' ')	goto yy19;
				if(yych <= '!')	goto yy14;
				goto yy17;
			}
		} else {
			if(yych <= '\''){
				if(yych <= '%')	goto yy23;
				if(yych <= '&')	goto yy12;
				goto yy15;
			} else {
				if(yych == '*')	goto yy13;
				if(yych <= '+')	goto yy23;
				goto yy10;
			}
		}
	} else {
		if(yych <= '['){
			if(yych <= ':'){
				if(yych <= '-')	goto yy2;
				if(yych <= '9')	goto yy23;
				goto yy10;
			} else {
				if(yych == '?')	goto yy11;
				if(yych <= 'Z')	goto yy23;
				goto yy6;
			}
		} else {
			if(yych <= 'z'){
				if(yych == ']')	goto yy8;
				goto yy23;
			} else {
				if(yych <= '{')	goto yy6;
				if(yych == '}')	goto yy8;
				goto yy23;
			}
		}
	}
yy2:	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yybm[0+yych] & 64)	goto yy35;
	if(yych == '-')	goto yy45;
yy3:
#line 175
	{   SyckLevel *lvl = CURRENT_LEVEL();
                        ENSURE_IOPEN(lvl, 0, 1);
                        goto Plain; }
yy4:	yych = *++YYCURSOR;
	goto yy44;
yy5:
#line 100
	{   // Isolate spaces
                        int indt_len;
                        SyckLevel *lvl;
                        char *indent = YYTOKEN;
                        NEWLINE(indent);
                        while ( indent < YYCURSOR ) 
                        { 
                            if ( *(++indent) != '\n' ) 
                                break; 
                            else
                                NEWLINE(indent);
                        }

                        // Calculate indent length
                        lvl = CURRENT_LEVEL();
                        indt_len = 0;
                        if ( *indent == ' ' ) indt_len = YYCURSOR - indent;

                        // Check for open indent
#ifdef REDEBUG
                        printf( "CALLING CURRENT AT INDENT: %d\n", indt_len );
                        printf( "CURSOR: %s\n", YYCURSOR );
#endif
                        ENSURE_IEND(lvl, indt_len);
                        ENSURE_IOPEN(lvl, indt_len, 0);
                        return INDENT;
                    }
yy6:	yych = *++YYCURSOR;
yy7:
#line 128
	{   SyckLevel *lvl = CURRENT_LEVEL();
                        ENSURE_IOPEN(lvl, 0, 1);
                        lvl = CURRENT_LEVEL();
                        lvl->status = syck_lvl_inline;
                        return YYTOKEN[0]; 
                    }
yy8:	yych = *++YYCURSOR;
yy9:
#line 135
	{   SyckLevel *lvl = CURRENT_LEVEL();
                        lvl->status = syck_lvl_implicit;
                        return YYTOKEN[0]; 
                    }
yy10:	yych = *++YYCURSOR;
	if(yych == '\n')	goto yy38;
	if(yych == ' ')	goto yy38;
	goto yy3;
yy11:	yych = *++YYCURSOR;
	if(yybm[0+yych] & 64)	goto yy35;
	goto yy3;
yy12:	yych = *++YYCURSOR;
	if(yych <= 'Z'){
		if(yych <= '/')	goto yy3;
		if(yych <= '9')	goto yy32;
		if(yych <= '@')	goto yy3;
		goto yy32;
	} else {
		if(yych <= '_'){
			if(yych <= '^')	goto yy3;
			goto yy32;
		} else {
			if(yych <= '`')	goto yy3;
			if(yych <= 'z')	goto yy32;
			goto yy3;
		}
	}
yy13:	yych = *++YYCURSOR;
	if(yych <= 'Z'){
		if(yych <= '/')	goto yy3;
		if(yych <= '9')	goto yy29;
		if(yych <= '@')	goto yy3;
		goto yy29;
	} else {
		if(yych <= '_'){
			if(yych <= '^')	goto yy3;
			goto yy29;
		} else {
			if(yych <= '`')	goto yy3;
			if(yych <= 'z')	goto yy29;
			goto yy3;
		}
	}
yy14:	yych = *++YYCURSOR;
	if(yybm[0+yych] & 32)	goto yy26;
	goto yy3;
yy15:	yych = *++YYCURSOR;
yy16:
#line 162
	{   goto SingleQuote; 
                    }
yy17:	yych = *++YYCURSOR;
yy18:
#line 165
	{   goto DoubleQuote; 
                    }
yy19:	yych = *++YYCURSOR;
	goto yy25;
yy20:
#line 168
	{   goto Document; }
yy21:	yych = *++YYCURSOR;
yy22:
#line 170
	{   SyckLevel *lvl = CURRENT_LEVEL();
                        ENSURE_IEND(lvl, -1);
                        return 0; 
                    }
yy23:	yych = *++YYCURSOR;
	goto yy3;
yy24:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy25:	if(yybm[0+yych] & 16)	goto yy24;
	goto yy20;
yy26:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy27:	if(yybm[0+yych] & 32)	goto yy26;
yy28:
#line 158
	{   yylval->name = syck_strndup( YYTOKEN + 1, YYCURSOR - YYTOKEN - 1 );
                        return TRANSFER;
                    }
yy29:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy30:	if(yych <= 'Z'){
		if(yych <= '/')	goto yy31;
		if(yych <= '9')	goto yy29;
		if(yych >= 'A')	goto yy29;
	} else {
		if(yych <= '_'){
			if(yych >= '_')	goto yy29;
		} else {
			if(yych <= '`')	goto yy31;
			if(yych <= 'z')	goto yy29;
		}
	}
yy31:
#line 154
	{   yylval->name = syck_strndup( YYTOKEN + 1, YYCURSOR - YYTOKEN - 1 );
                        return ALIAS;
                    }
yy32:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy33:	if(yych <= 'Z'){
		if(yych <= '/')	goto yy34;
		if(yych <= '9')	goto yy32;
		if(yych >= 'A')	goto yy32;
	} else {
		if(yych <= '_'){
			if(yych >= '_')	goto yy32;
		} else {
			if(yych <= '`')	goto yy34;
			if(yych <= 'z')	goto yy32;
		}
	}
yy34:
#line 150
	{   yylval->name = syck_strndup( YYTOKEN + 1, YYCURSOR - YYTOKEN - 1 );
                        return ANCHOR;
                    }
yy35:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy36:	if(yybm[0+yych] & 64)	goto yy35;
yy37:
#line 144
	{   SyckLevel *lvl = CURRENT_LEVEL();
                        ENSURE_IOPEN(lvl, parser->token - parser->lineptr, 1);
                        YYPOS(1); 
                        return YYTOKEN[0]; 
                    }
yy38:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy39:	if(yych == '\n')	goto yy38;
	if(yych == ' ')	goto yy38;
yy40:
#line 140
	{   YYPOS(1); 
                        return YYTOKEN[0]; 
                    }
yy41:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy42:	if(yych == ' ')	goto yy41;
	goto yy5;
yy43:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy44:	if(yybm[0+yych] & 128)	goto yy43;
	if(yych == ' ')	goto yy41;
	goto yy5;
yy45:	yych = *++YYCURSOR;
	if(yych == '-')	goto yy47;
yy46:	YYCURSOR = YYMARKER;
	switch(yyaccept){
	case 0:	goto yy3;
	}
yy47:	yych = *++YYCURSOR;
	if(yych == '\n')	goto yy48;
	if(yych != ' ')	goto yy46;
yy48:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy49:	if(yych == '\n')	goto yy48;
	if(yych == ' ')	goto yy48;
yy50:
#line 96
	{   YYPOS(3);
                        return DOCSEP; 
                    }
}
#line 179


Plain:
    {
        SyckLevel *plvl;
        char *plaintok;
        YYCURSOR = YYTOKEN;
        plvl = CURRENT_LEVEL();

Plain2: 
        plaintok = YYCURSOR;

{
	YYCTYPE yych;
	unsigned int yyaccept;
	static unsigned char yybm[] = {
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0, 192,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	128,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	  0,   0,   0,   0,   0,   0,   0,   0, 
	};
	goto yy51;
yy52:	++YYCURSOR;
yy51:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '9'){
		if(yych <= '\n'){
			if(yych <= '\000')	goto yy58;
			if(yych <= '\t')	goto yy61;
			goto yy60;
		} else {
			if(yych == ',')	goto yy57;
			goto yy61;
		}
	} else {
		if(yych <= ']'){
			if(yych <= ':')	goto yy53;
			if(yych <= '\\')	goto yy61;
			goto yy55;
		} else {
			if(yych == '}')	goto yy55;
			goto yy61;
		}
	}
yy53:	yych = *++YYCURSOR;
	if(yych == '\n')	goto yy66;
	if(yych == ' ')	goto yy66;
yy54:
#line 205
	{   goto Plain2; }
yy55:	yych = *++YYCURSOR;
yy56:
#line 196
	{   if ( plvl->status != syck_lvl_inline ) goto Plain2;
                        YYCURSOR = plaintok;
                        goto Implicit; 
                    }
yy57:	yych = *++YYCURSOR;
	if(yybm[0+yych] & 128)	goto yy64;
	goto yy54;
yy58:	yych = *++YYCURSOR;
yy59:
#line 201
	{   YYCURSOR = plaintok;
                        goto Implicit; 
                    }
yy60:	yych = *++YYCURSOR;
	goto yy63;
yy61:	yych = *++YYCURSOR;
	goto yy54;
yy62:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy63:	if(yybm[0+yych] & 64)	goto yy62;
	goto yy59;
yy64:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy65:	if(yybm[0+yych] & 128)	goto yy64;
	goto yy56;
yy66:	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy67:	if(yych == '\n')	goto yy66;
	if(yych == ' ')	goto yy66;
yy68:
#line 193
	{   YYCURSOR = plaintok;
                        goto Implicit; }
}
#line 207

    }

Implicit:
    {
        char *impend = YYCURSOR;
        YYCURSOR = YYTOKEN;

Implicit2:

{
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy69;
yy70:	++YYCURSOR;
yy69:
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
	if(yych >= '\001')	goto yy72;
yy71:yy72:	yych = *++YYCURSOR;
yy73:
#line 219
	{   YYCURSOR = impend;
                        yylval->nodeData = syck_new_str2( YYTOKEN, YYCURSOR - YYTOKEN );
                        return PLAIN;
                    }
}
#line 223

    }

SingleQuote:
    {
        int qidx = 0;
        int qcapa = 100;
        char *qstr = S_ALLOC_N( char, qcapa );

SingleQuote2:

{
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy74;
yy75:	++YYCURSOR;
yy74:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '\000')	goto yy76;
	if(yych == '\'')	goto yy77;
	goto yy79;
yy76:yy77:	yych = *++YYCURSOR;
	if(yych == '\'')	goto yy81;
yy78:
#line 239
	{   SyckNode *n = syck_alloc_str();
                        n->data.str->ptr = qstr;
                        n->data.str->len = qidx;
                        yylval->nodeData = n;
                        return PLAIN; 
                    }
yy79:	yych = *++YYCURSOR;
yy80:
#line 245
	{   QUOTECAT(qstr, qcapa, qidx, *(YYCURSOR - 1)); 
                        goto SingleQuote2; 
                    }
yy81:	yych = *++YYCURSOR;
yy82:
#line 236
	{   QUOTECAT(qstr, qcapa, qidx, '\'');
                        goto SingleQuote2; 
                    }
}
#line 249


    }


DoubleQuote:
    {
        int qidx = 0;
        int qcapa = 100;
        char *qstr = S_ALLOC_N( char, qcapa );

DoubleQuote2:

{
	YYCTYPE yych;
	unsigned int yyaccept;
	goto yy83;
yy84:	++YYCURSOR;
yy83:
	if((YYLIMIT - YYCURSOR) < 2) YYFILL(2);
	yych = *YYCURSOR;
	if(yych <= '"'){
		if(yych <= '\000')	goto yy85;
		if(yych <= '!')	goto yy90;
		goto yy88;
	} else {
		if(yych == '\\')	goto yy86;
		goto yy90;
	}
yy85:yy86:	yych = *++YYCURSOR;
	if(yych == '"')	goto yy91;
yy87:
#line 273
	{   QUOTECAT(qstr, qcapa, qidx, *(YYCURSOR - 1)); 
                        goto DoubleQuote2; 
                    }
yy88:	yych = *++YYCURSOR;
yy89:
#line 267
	{   SyckNode *n = syck_alloc_str();
                        n->data.str->ptr = qstr;
                        n->data.str->len = qidx;
                        yylval->nodeData = n;
                        return PLAIN; 
                    }
yy90:	yych = *++YYCURSOR;
	goto yy87;
yy91:	yych = *++YYCURSOR;
yy92:
#line 264
	{   QUOTECAT(qstr, qcapa, qidx, '"');
                        goto DoubleQuote2; 
                    }
}
#line 277


    }

}

int 
yywrap()
{
    return 1;
}

void 
yyerror( char *msg )
{
    if ( syck_parser_ptr->error_handler == NULL )
        syck_parser_ptr->error_handler = syck_default_error_handler;

    (syck_parser_ptr->error_handler)(syck_parser_ptr, msg);
}

